--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 
+{% if messages %}
+
+  {% for message in messages %}
+    <div class="alert alert-danger" role="alert">{{ message }}</div>
+  {% endfor %}
+
+{% endif %}
+
 <main class="flex-grow-1">
     <div class="container-lg mt-3">
         <h1></h1>
@@ -10,7 +18,7 @@
             <h1 class="display-3">Анализатор страниц</h1>
             <p class="lead">Бесплатно проверяйте сайты на SEO-пригодность</p>
             <form action="/" method="post" class="d-flex justify-content-center">
-                <input type="text" name="url" required value="" class="form-control form-control-lg" placeholder="https://www.example.com">
+                <input type="text" name="url" value="" class="form-control form-control-lg" placeholder="https://www.example.com">
                 <input type="submit" class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
             </form>
         </div>
