--- a/page_analyzer/templates/url_info.html
+++ b/page_analyzer/templates/url_info.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{% if messages %}
+
+  {% for message in messages %}
+    <div class="alert alert-success" role="alert">{{ message }}</div>
+  {% endfor %}
+
+{% endif %}
 
 <main class="flex-grow-1">
     <div class="container-lg mt-3">
@@ -49,10 +56,10 @@
       {% for check in checks_list %}
       <tr>
         <td>{{ check['id'] }}</td>
-        <td>{{ check['code_response'] }}</td>
+        <td>{{ check['status_code'] }}</td>
         <td>{{ check['h1'] }}</td>
         <td>{{ check['title'] }}</td>
-        <td>{{ check['description '] }}</td>
+        <td>{{ check['description'] }}</td>
         <td>{{ check['created_at'] }}</td>
       </tr>
       {% endfor %}
