--- a/page_analyzer/templates/url_info.html
+++ b/page_analyzer/templates/url_info.html
@@ -3,40 +3,44 @@
 {% block content %}
 {% if messages %}
 
-  {% for message in messages %}
-    <div class="alert alert-success" role="alert">{{ message }}</div>
+  {% for category, message in messages %}
+    {% if category == 'success' %}
+      <div class="alert alert-success" role="alert">{{ message }}</div>
+    {% else %}
+      <div class="alert alert-danger" role="alert">{{ message }}</div>
+    {% endif %}
   {% endfor %}
 
 {% endif %}
 
 <main class="flex-grow-1">
     <div class="container-lg mt-3">
-      <h1>Сайт: {{ url_info['name'] }}</h1>
+      <h1>Сайт: {{ url_info[0]['name'] }}</h1>
 
     
   <div class="table-responsive">
     <table class="table table-bordered table-hover text-nowrap" data-test="url">
       <tbody>
-
+        {% for info in url_info %}
         <tr>
           <td>ID</td>
-          <td>{{ url_info['id'] }}</td>
+          <td>{{ info['id'] }}</td>
         </tr>
         <tr>
           <td>Имя</td>
-          <td>{{ url_info['name'] }}</td>
+          <td>{{ info['name'] }}</td>
         </tr>
         <tr>
           <td>Дата создания</td>
-          <td>{{ url_info['created_at'] }}</td>
+          <td>{{ info['DATE(created_at)'] }}</td>
         </tr>
-
+        {% endfor %}
       </tbody>
     </table>
   </div>
 
     <h2 class="mt-5 mb-3">Проверки</h2>
-    <form method="post" action="/urls/{{ url_info['id'] }}/checks">
+    <form method="post" action="/urls/{{ url_info[0]['id'] }}/checks">
     <input type="submit" class="btn btn-primary" value="Запустить проверку">
     </form>
     
@@ -60,7 +64,7 @@
         <td>{{ check['h1'] }}</td>
         <td>{{ check['title'] }}</td>
         <td>{{ check['description'] }}</td>
-        <td>{{ check['created_at'] }}</td>
+        <td>{{ check['DATE(created_at)'] }}</td>
       </tr>
       {% endfor %}
       </tbody>
