--- a/page_analyzer/templates/sites.html
+++ b/page_analyzer/templates/sites.html
@@ -26,9 +26,9 @@
 
         <td><a href="/urls/{{ row['id'] }}">{{ row['name'] }}</a></td>
 
-        <td>{{ row['created_at_last_check'] }}</td>
+        <td>{{ row['date'] }}</td>
 
-        <td>{{ row['status_code_last_check'] }}</td>
+        <td>{{ row['status_code'] }}</td>
 
 
       </tr>
