--- a/page_analyzer/templates/url_info.html
+++ b/page_analyzer/templates/url_info.html
@@ -32,7 +32,7 @@
         </tr>
         <tr>
           <td>Дата создания</td>
-          <td>{{ info['DATE(created_at)'] }}</td>
+          <td>{{ info['date'] }}</td>
         </tr>
         {% endfor %}
       </tbody>
@@ -64,7 +64,7 @@
         <td>{{ check['h1'] }}</td>
         <td>{{ check['title'] }}</td>
         <td>{{ check['description'] }}</td>
-        <td>{{ check['DATE(created_at)'] }}</td>
+        <td>{{ check['date'] }}</td>
       </tr>
       {% endfor %}
       </tbody>
