--- a/page_analyzer/templates/url_info.html
+++ b/page_analyzer/templates/url_info.html
@@ -15,32 +15,32 @@
 
 <main class="flex-grow-1">
     <div class="container-lg mt-3">
-      <h1>Сайт: {{ url_info[0]['name'] }}</h1>
+      <h1>Сайт: {{ url_info['name'] }}</h1>
 
     
   <div class="table-responsive">
     <table class="table table-bordered table-hover text-nowrap" data-test="url">
       <tbody>
-        {% for info in url_info %}
+
         <tr>
           <td>ID</td>
-          <td>{{ info['id'] }}</td>
+          <td>{{ url_info['id'] }}</td>
         </tr>
         <tr>
           <td>Имя</td>
-          <td>{{ info['name'] }}</td>
+          <td>{{ url_info['name'] }}</td>
         </tr>
         <tr>
           <td>Дата создания</td>
-          <td>{{ info['date'] }}</td>
+          <td>{{ url_info['date'] }}</td>
         </tr>
-        {% endfor %}
+
       </tbody>
     </table>
   </div>
 
     <h2 class="mt-5 mb-3">Проверки</h2>
-    <form method="post" action="/urls/{{ url_info[0]['id'] }}/checks">
+    <form method="post" action="/urls/{{ url_info['id'] }}/checks">
     <input type="submit" class="btn btn-primary" value="Запустить проверку">
     </form>
     
