--- a/page_analyzer/templates/sites.html
+++ b/page_analyzer/templates/sites.html
@@ -21,15 +21,21 @@
 
       <tr>
 
-
         <td>{{ row['id'] }}</td>
 
         <td><a href="/urls/{{ row['id'] }}">{{ row['name'] }}</a></td>
 
+        {% if row['date'] %}
         <td>{{ row['date'] }}</td>
+        {% else %}
+        <td></td>
+        {% endif %}
 
+        {% if row['date'] %}
         <td>{{ row['status_code'] }}</td>
-
+        {% else %}
+        <td></td>
+        {% endif %}
 
       </tr>
       {% endfor %}
